; ModuleID = '/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_argv.c_argv_printf_cat__used_twice__argc_correct.c'
source_filename = "/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_argv.c_argv_printf_cat__used_twice__argc_correct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"%s %s %s\00", align 1
@PATH1 = common dso_local global i32 0, align 4
@PATH2 = common dso_local global i32 0, align 4
@PARAM1 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@PARAM2 = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**)* @argv_printf_cat__used_twice__argc_correct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @argv_printf_cat__used_twice__argc_correct(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca %struct.argv, align 4
  store i8** %0, i8*** %2, align 8
  %4 = call i32 (...) @argv_new()
  %5 = getelementptr inbounds %struct.argv, %struct.argv* %3, i32 0, i32 0
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @PATH1, align 4
  %7 = load i32, i32* @PATH2, align 4
  %8 = load i32, i32* @PARAM1, align 4
  %9 = call i32 @argv_printf(%struct.argv* %3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %7, i32 %8)
  %10 = load i32, i32* @PARAM2, align 4
  %11 = call i32 (%struct.argv*, i8*, ...) @argv_printf_cat(%struct.argv* %3, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  %12 = call i32 (%struct.argv*, i8*, ...) @argv_printf_cat(%struct.argv* %3, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %13 = getelementptr inbounds %struct.argv, %struct.argv* %3, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @assert_int_equal(i32 %14, i32 5)
  %16 = call i32 @argv_reset(%struct.argv* %3)
  ret void
}

declare dso_local i32 @argv_new(...) #1

declare dso_local i32 @argv_printf(%struct.argv*, i8*, i32, i32, i32) #1

declare dso_local i32 @argv_printf_cat(%struct.argv*, i8*, ...) #1

declare dso_local i32 @assert_int_equal(i32, i32) #1

declare dso_local i32 @argv_reset(%struct.argv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
